--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "@vitejs/plugin-vue": "^2.0.0",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
+    "autoprefixer": "^10.4.2",
     "eslint": "^8.7.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-html": "^6.2.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.3.0",
+    "postcss": "^8.4.5",
     "prettier": "^2.5.1",
+    "tailwindcss": "^3.0.15",
     "vite": "^2.7.2"
   }
 }
