--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/vue": "^1.0.5",
     "firebase": "^9.6.3",
     "vue": "^3.2.25",
     "vue-router": "4",
