--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ docs
 # Ignore all recipes except for sample recipes
 src/data/recipes/**.json
 !src/data/recipes/recipe.example.json
+!src/data/recipes/recipe2.example.json
 
 # Junk
 Desktop.ini
