--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-plugin-vue": "^8.3.0",
     "postcss": "^8.4.5",
     "prettier": "^2.5.1",
+    "sass": "^1.49.8",
     "tailwindcss": "^3.0.15",
     "vite": "^2.7.2"
   }
