--- a/package.json
+++ b/package.json
@@ -16,19 +16,16 @@
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
+    "@rushstack/eslint-patch": "^1.1.0",
     "@vitejs/plugin-vue": "^2.1.0",
-    "@vue/cli-plugin-router": "~5.0.1",
-    "@vue/cli-plugin-vuex": "~5.0.1",
+    "@vue/eslint-config-prettier": "^7.0.0",
     "autoprefixer": "^10.4.2",
     "eslint": "^8.7.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-html": "^6.2.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-vue": "^8.3.0",
     "postcss": "^8.4.5",
+    "eslint-plugin-vue": "^8.2.0",
     "prettier": "^2.5.1",
     "sass": "^1.49.8",
-    "tailwindcss": "^3.0.15",
-    "vite": "^2.7.2"
+    "tailwindcss": "^3.0.23",
+    "vite": "^2.7.13"
   }
 }
